--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@aws-sdk/client-appconfig": "^3.478.0",
+    "@types/aws-sdk": "^2.7.0"        
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
