--- a/action.yml
+++ b/action.yml
@@ -9,10 +9,9 @@ branding:
 
 # Define your inputs here.
 inputs:
-  milliseconds:
-    description: 'Your input description here'
+  configPath:
+    description: 'appconfig file path'
     required: true
-    default: '1000'
 
 # Define your outputs here.
 outputs:
